--- a/css/styles.css
+++ b/css/styles.css
@@ -450,19 +450,37 @@ h4 {
     z-index: -1; } }
 
 .loader-container {
-  width: 300px;
-  height: 500px; }
+  display: flex;
+  width: 400px;
+  height: 400px;
+  align-items: center;
+  justify-content: space-between; }
   .loader-container img {
-    height: 70%;
-    width: 70%;
-    margin-left: 15%; }
+    height: 20%;
+    width: 20%; }
+  @media only screen and (max-width: 37.5em) {
+    .loader-container {
+      width: 360px;
+      height: 360px; } }
 
-.ghost {
-  animation: float 3s ease-out infinite; }
+.apple {
+  animation: vanish 2s ease-in forwards; }
 
-@keyframes float {
+.pears {
+  animation: vanish 2s ease-in forwards;
+  animation-delay: 1s; }
+
+.plums {
+  animation: vanish 2s ease-in forwards;
+  animation-delay: 2s; }
+
+@keyframes vanish {
+  0% {
+    opacity: 1; }
   50% {
-    transform: translate(0, 20px); } }
+    transform: translate(0, 20px); }
+  100% {
+    opacity: 0; } }
 
 .shadowFrame {
   width: 130px;
