--- a/sass/components/_loader.scss
+++ b/sass/components/_loader.scss
@@ -12,6 +12,7 @@
   left: 0;
   right: 0;
   z-index: 1000;
+
   @media only screen and (max-width: $bp-largest) {
     width: 100vw;
   }
@@ -34,28 +35,66 @@
     z-index: -1;
   }
 }
-
 .loader-container {
-  width: 300px;
-  height: 500px;
+  display: flex;
+  width: 400px;
+  height: 400px;
+  align-items: center;
+  justify-content: space-between;
   & img {
-    height: 70%;
-    width: 70%;
-    margin-left: 15%;
+    
+    height: 20%;
+    width: 20%;
+  }
+
+  @media only screen and (max-width:$bp-small){
+    width: 360px;
+    height: 360px;
   }
 }
-.ghost {
-  animation: float 3s ease-out infinite;
+
+.apple {
+  animation: vanish 2s ease-in forwards;
 }
-@keyframes float {
+.pears {
+ 
+  animation: vanish 2s ease-in forwards;
+  animation-delay: 1s;
+}
+.plums {
+
+  animation: vanish 2s ease-in forwards;
+  animation-delay: 2s;
+}
+
+
+// .ghost {
+//   animation: float 3s ease-out infinite;
+// }
+// @keyframes float {
+//   50% {
+//     transform: translate(0, 20px);
+//   }
+// }
+
+@keyframes vanish{
+  0% {
+    opacity: 1;
+  }
+
   50% {
     transform: translate(0, 20px);
   }
+  100% {
+    opacity: 0;
+  }
+
 }
 .shadowFrame {
   width: 130px;
   margin: auto;
   margin-top: 25px;
+
 }
 .shadow {
   animation: shrink 3s ease-out infinite;
